--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_NAME='Identification Abonné Mobile'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jT1gjmoxJQdTmfvsa9XV6p1jATbhex4FgsqZzCm3PrY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL='http://localhost:8181'
 
-RECAPTCHA_SECRET=
+RECAPTCHA_SECRET=6Le0UkweAAAAADnzJbqGAOAiDvVraUShf0T5EXXl
 
-HTML_MINIFY=true
+HTML_MINIFY=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,10 +14,15 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=identification_abonnes_mobile
+DB_PORT=3307
+DB_DATABASE=oneci_kernel
 DB_USERNAME=root
 DB_PASSWORD=
+
+SMS_CUSTOMER_ID=4161
+SMS_USERNAME=oneci
+SMS_PASSWORD=@Oneci2021@
+SMS_ORIGINATOR=ONECI
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -33,12 +38,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=outlook.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=no-reply@oneci.ci
+MAIL_PASSWORD=D@su*dabd21
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@oneci.ci
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
