--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^8.75",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
