Ajout du service SMS dans le fichier .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ DB_DATABASE=oneci_kernel
 DB_USERNAME=root
 DB_PASSWORD=
 
+SMS_SERVICE_ENABLED=true
 SMS_CUSTOMER_ID=4161
 SMS_USERNAME=oneci
 SMS_PASSWORD=@Oneci2021@
