Génération lien de paiement partie 4

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ DB_DATABASE=oneci_abonnes_mobile
 DB_USERNAME=root
 DB_PASSWORD=
 
+CINETPAY_API_KEY=179990205162cc71d73e8804.22209231
+CINETPAY_SERVICE_KEY=298376
+CINETPAY_SERVICE_AMOUNT=100
+CINETPAY_CHECK_URL=https://api-checkout-oneci.cinetpay.com/v2/payment/check
+
 SMS_SERVICE_ENABLED=false
 SMS_CUSTOMER_ID=4161
 SMS_USERNAME=oneci
