--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,8 @@
 APP_NAME='Identification Abonné Mobile'
 APP_ENV=local
-APP_KEY=base64:jT1gjmoxJQdTmfvsa9XV6p1jATbhex4FgsqZzCm3PrY=
+APP_KEY=
 APP_DEBUG=true
 APP_URL='http://localhost:8000'
-
-RECAPTCHA_SECRET=6Le0UkweAAAAADnzJbqGAOAiDvVraUShf0T5EXXl
-
-HTML_MINIFY=false
-
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -19,16 +11,35 @@ DB_DATABASE=oneci_abonnes_mobile
 DB_USERNAME=root
 DB_PASSWORD=
 
+RECAPTCHA_ENABLED=true
+RECAPTCHA_SECRET=6Le0UkweAAAAADnzJbqGAOAiDvVraUShf0T5EXXl
+
+CINETPAY_API_ENABLED=true
 CINETPAY_API_KEY=179990205162cc71d73e8804.22209231
 CINETPAY_SERVICE_KEY=298376
 CINETPAY_SERVICE_AMOUNT=100
 CINETPAY_CHECK_URL=https://api-checkout-oneci.cinetpay.com/v2/payment/check
 
-SMS_SERVICE_ENABLED=false
+SMS_SERVICE_ENABLED=true
 SMS_CUSTOMER_ID=4161
 SMS_USERNAME=oneci
 SMS_PASSWORD=@Oneci2021@
 SMS_ORIGINATOR=ONECI
+
+MAIL_MAILER=smtp
+MAIL_HOST=outlook.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=no-reply@oneci.ci
+MAIL_PASSWORD=D@su*dabd21
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@oneci.ci
+MAIL_FROM_NAME="${APP_NAME}"
+
+HTML_MINIFY=false
+
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,15 +53,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=outlook.office365.com
-MAIL_PORT=587
-MAIL_USERNAME=no-reply@oneci.ci
-MAIL_PASSWORD=D@su*dabd21
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=no-reply@oneci.ci
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
