--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
         "ext-simplexml": "*",
+        "ext-zip": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "dipeshsukhia/laravel-html-minify": "^2.0",
         "endroid/qr-code": "^4.6",
@@ -17,7 +18,8 @@
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
-        "realrashid/sweet-alert": "^6.0"
+        "realrashid/sweet-alert": "^6.0",
+        "stechstudio/laravel-zipstream": "^4.13"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
