--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ deploy:
   on:
     branch: main
 
-after_success:
+after_deploy:
   - /usr/local/bin/php7.4 composer.phar install
   - /usr/local/bin/npm-node14 install
 
