--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,10 @@ before_deploy:
 deploy:
   provider: script
   script:
-    pwd
-    /usr/local/bin/php7.4 composer.phar install
-    /usr/local/bin/npm-node14 install
+    ssh -i ./travis_deploy_key clfvcfl@sshcloud.cluster024.hosting.ovh.net -p 44306 "/usr/local/bin/php7.4 composer.phar install && /usr/local/bin/npm-node14 install"
   on:
     branch: main
 
+after_deploy:
+  - /usr/local/bin/php7.4 composer.phar install
+  - /usr/local/bin/npm-node14 install
