--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_deploy:
 deploy:
   provider: script
   script:
-    ssh -i ./travis_deploy_key clfvcfl@sshcloud.cluster024.hosting.ovh.net -p 44306 "/usr/local/bin/php7.4 composer.phar install && /usr/local/bin/npm-node14 install"
+    ssh -i ./travis_deploy_key clfvcfl@sshcloud.cluster024.hosting.ovh.net -p 44306 "cd /home/clfvcfl/identification-abonnes/public/test && /usr/local/bin/php7.4 composer.phar install && /usr/local/bin/npm-node14 install"
   on:
     branch: main
 
