--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ before_install:
 before_deploy:
   - cd $TRAVIS_BUILD_DIR
   - mkdir travis_deploy
-  - rsync -a --exclude-from=".rsync-exclude" $TRAVIS_BUILD_DIR/ ./travis_deploy/
+  - rsync -a $TRAVIS_BUILD_DIR/ ./travis_deploy/
   - zip -r travis_deploy.zip travis_deploy/
   - ls -al $TRAVIS_BUILD_DIR/travis_deploy
-  - rsync -r --delete-after --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
+  - rsync -r --delete-after --filter "protect .rsync-exclude" --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
 
 deploy:
   provider: script
