Modification sur la génération des QR codes 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,8 @@ before_deploy:
   - mkdir travis_deploy
   - rsync -a --exclude={"vendor/","node_modules/",".git/","travis_deploy/",".travis.yml",".gitignore"} $TRAVIS_BUILD_DIR/ ./travis_deploy/
   - zip -r travis_deploy.zip travis_deploy/
-  - ls -al $TRAVIS_BUILD_DIR/travis_deploy
-  - rsync -r --delete-after --filter "protect .rsync-exclude" --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
-
+  - ls -al $TRAVIS_BUILD_DIR/travis_deploy/storage
+  - rsync -r --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv --delete-after --filter "protect .rsync-exclude" travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
 deploy:
   provider: script
   script:
