Modification sur la génération des QR codes 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_deploy:
   - rsync -a --exclude={"vendor/","node_modules/",".git/","travis_deploy/",".travis.yml",".gitignore"} $TRAVIS_BUILD_DIR/ ./travis_deploy/
   - zip -r travis_deploy.zip travis_deploy/
   - ls -al $TRAVIS_BUILD_DIR/travis_deploy/storage
-  - rsync -r --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv --delete-after --filter "protect .rsync-exclude" travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
+  - rsync -r --quiet -e "ssh -p 44306 -o StrictHostKeyChecking=no" -vv -vv --filter="dir-merge,- .rsync-exclude" travis_deploy/ clfvcfl@sshcloud.cluster024.hosting.ovh.net:/home/clfvcfl/identification-abonnes
 deploy:
   provider: script
   script:
