Prise en compte des frais d'exemptionsur le formulaire de pré-identification

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ CINETPAY_API_ENABLED=true
 CINETPAY_API_KEY=179990205162cc71d73e8804.22209231
 CINETPAY_SERVICE_KEY=298376
 CINETPAY_SERVICE_AMOUNT=100
+CINETPAY_SERVICE_AMOUNT_TEMP=100
 CINETPAY_CHECK_URL=https://api-checkout-oneci.cinetpay.com/v2/payment/check
 
 SMS_SERVICE_ENABLED=true
