Modification API envoi SMS OTP

--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,13 @@ CINETPAY_SERVICE_AMOUNT=100
 CINETPAY_SERVICE_AMOUNT_TEMP=100
 CINETPAY_CHECK_URL=https://api-checkout-oneci.cinetpay.com/v2/payment/check
 
-SMS_SERVICE_ENABLED=true
-SMS_CUSTOMER_ID=4161
-SMS_USERNAME=oneci
-SMS_PASSWORD=@Oneci2021@
-SMS_ORIGINATOR=ONECI
+#SMS_SERVICE_ENABLED=true
+#SMS_CUSTOMER_ID=4161
+#SMS_USERNAME=oneci
+#SMS_PASSWORD=@Oneci2021@
+#SMS_ORIGINATOR=ONECI
+SMS_SENDER=ONECI
+SMS_ACCESS_TOKEN=8X71u3MiOEm2A57i9QTNMkZj9WToCzA0sMB
 
 MAIL_MAILER=smtp
 MAIL_HOST=outlook.office365.com
