Intégration nouvelle API envoi SMS OTP MTN CI.

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ CINETPAY_SERVICE_AMOUNT=100
 CINETPAY_SERVICE_AMOUNT_TEMP=100
 CINETPAY_CHECK_URL=https://api-checkout-oneci.cinetpay.com/v2/payment/check
 
-#SMS_SERVICE_ENABLED=true
+SMS_SERVICE_ENABLED=true
 #SMS_CUSTOMER_ID=4161
 #SMS_USERNAME=oneci
 #SMS_PASSWORD=@Oneci2021@
