Mise à jour de l'exemple de fichier .env
Modification de l'environnement vers la production et désactivation du mode debug. Mise à jour de l'URL de l'application et ajout de paramètres de base de données supplémentaires en commentaire.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME='Carte Professionnelle'
 APP_FULL_NAME="Plateforme de gestion des cartes professionnelles"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:XOylHAlAWwkxvHswKa0Mqn51j5LUBXqmUdW5BFDjUZM=
-APP_DEBUG=true
-APP_URL='http://localhost:8000'
+APP_DEBUG=false
+APP_URL='https://carte-professionnelle.oneci.ci'
 
 DB_CONNECTION=mysql
 DB_HOST=np110680-001.dbaas.ovh.net
@@ -11,6 +11,13 @@ DB_PORT=35989
 DB_DATABASE=oneci_carte_professionnelle
 DB_USERNAME=cartepro
 DB_PASSWORD=Oneci000
+
+#DB_CONNECTION=mysql
+#DB_HOST=localhost
+#DB_PORT=3306
+#DB_DATABASE=oneci_carte_professionnelle
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 DB_CONNECTION_KERNEL=maria_db_kernel
 DB_HOST_KERNEL=np110680-001.dbaas.ovh.net
